--- a/template.html
+++ b/template.html
@@ -27,7 +27,7 @@
 
 <body>
 	<!-- Edit sourcefiles name below for different 3D models -->
-	<canvas id="fullscreen" class="3dviewer" sourcefiles="3D-models/texturedcube.obj|3D-models/texturedcube.mtl|3D-models/texture.png" width="200" height="200"></canvas>
+	<canvas id="fullscreen" class="3dviewer" sourcefiles="3D-model/sample.obj|3D-model/sample.mtl|3D-model/sample.png" width="200" height="200"></canvas>
 </body>
 
 </html>
